--- a/Apps/SuperCRM/Client/css/SuperCRM.css
+++ b/Apps/SuperCRM/Client/css/SuperCRM.css
@@ -1,37 +1,37 @@
-﻿.dummyCRM {
+﻿.SuperCRM {
   font-family: Calibri, Helvetica, Arial, sans-serif;
 }
 
-.dummyCRM h1 {
+.SuperCRM h1 {
   font-size: 20px;
 }
 
-.dummyCRM ul {
+.SuperCRM ul {
   display: table;
   list-style: none;
   padding: 0;
 }
 
-.dummyCRM li {
+.SuperCRM li {
   display: table-row;
 }
 
-.dummyCRM li a {
+.SuperCRM li a {
     padding: 10px;
     display: block;
     color: black;
     text-decoration: none;
 }
 
-.dummyCRM li:hover {
+.SuperCRM li:hover {
   background-color: whitesmoke;
 }
 
-.dummyCRM li span {
+.SuperCRM li span {
   display: table-cell;
   padding-right: 20px;
 }
 
-.dummyCRM li span:last-child {
+.SuperCRM li span:last-child {
   padding-right: 0;
 }
