--- a/Client/css/menu.css
+++ b/Client/css/menu.css
@@ -1,8 +1,11 @@
+﻿
 
+#launcher-menu {
+    background-color: #333c4e;
+    color: #8a98b0;
+}
 
-.menu {
-	width: 100%;
-	height: 100%;
+#launcher-menu ul {
 	margin: 0px;
 
 	padding-top: 6px;
@@ -13,31 +16,30 @@
 
  	list-style-type: none;	/* Remove bullets */
 
-	border: 0px solid #3d4860;
 
-	font-family : inherit; 		
-	font-size   : 100%;
-
-	background-color: #333c4e;
-	color: #8a98b0;
 }
 
-.menu li:hover {
+#launcher-menu ul li:hover {
 	background-color: #6794AC;
 	color:white;
 }
 
-.menu li {
-	margin: 0px;
-	padding-top: 8px;
-	padding-bottom: 8px;
-	padding-left: 2px;
-	padding-right: 2px;
-
+#launcher-menu ul li {
 	border-bottom: 1px solid #3d4860;
 }
 
-.menu a:link, a:visited, a:hover, a:active{
+#launcher-menu a {
+    display: block;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
+#launcher-menu ul a:link,
+#launcher-menu a:visited,
+#launcher-menu a:hover,
+#launcher-menu a:active{
 	color:inherit;
 	text-decoration:none;
 /*	outline: none; */
