--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -1,21 +1,22 @@
 ﻿html,body{
+    font-family: Calibri, Helvetica, Arial, sans-serif;
+    font-size: 14px;
 	height: 100%;
     padding: 0;
     margin: 0;
     height: 100%;
 }
 
-#menu{
-    float:left;
-    box-shadow: inset -8px 0px 8px -4px rgba(0, 0, 0, 0.4),
-                inset 0px 8px 8px -4px rgba(0, 0, 0, 0.4);
-    height: 100%;
+#launcher-menu {
+    flex: 0 1 auto;
+    background-color: #333c4e;
+    color: #8a98b0;
 }
 
-#menu ul {
-    list-style: none;
-    padding: 10px;
+pj-dashboard {
+    width: 100%;
 }
+
 pj-sortable-tiles{
-    width: 80%;
+    flex: 1 1 auto;
 }
