--- a/Apps/SuperCRM/Client/css/labeledInput.css
+++ b/Apps/SuperCRM/Client/css/labeledInput.css
@@ -49,6 +49,13 @@
 	order: 0;
 	align-self: baseline;
 
+	padding-right: 4px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display:block;	
+
 	font: inherit;
 
 	color: #999;
