--- a/Client/css/menu.css
+++ b/Client/css/menu.css
@@ -16,7 +16,6 @@
 
  	list-style-type: none;	/* Remove bullets */
 
-
 }
 
 #launcher-menu ul li:hover {
@@ -26,6 +25,8 @@
 
 #launcher-menu ul li {
 	border-bottom: 1px solid #3d4860;
+    padding-right: 8px;
+    padding-left: 4px;
 }
 
 #launcher-menu a {
@@ -42,5 +43,4 @@
 #launcher-menu a:active{
 	color:inherit;
 	text-decoration:none;
-/*	outline: none; */
 }
