--- a/Apps/Map/Client/css/map.css
+++ b/Apps/Map/Client/css/map.css
@@ -1,7 +1,12 @@
-﻿
+﻿.map {
+  display: flex;
+}
 .map h1 {
   font-size: 150%;
   padding-left: 8px;
   margin:0px;
   border-bottom: 1px solid #ddd;
+}
+.map static-openstreetmap {
+    flex: 1 1 auto;
 }
