--- a/Client/css/launcher-button.css
+++ b/Client/css/launcher-button.css
@@ -5,8 +5,8 @@
 	padding: 0px;
 
 	margin:0px;
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    /*height: 100%;*/
 
 	background-color: #013859;
 	color: #fff;
