--- a/Apps/SuperCRM/Client/css/SuperCRM.css
+++ b/Apps/SuperCRM/Client/css/SuperCRM.css
@@ -1,15 +1,21 @@
 ﻿
+.SuperCRM {
+  box-sizing: border-box;
+}
+
 .SuperCRM h1 {
   font-size: 150%;
-  padding-left: 8px;
   margin:0px;
+  color: #333C4E;
   border-bottom: 1px solid #ddd;
 }
 
 .SuperCRM ul {
   display: table;
   list-style: none;
-  padding: 0;
+  padding: 0px;
+  margin: 8px 0px 0px 0px;
+  width: 100%;
 }
 
 .SuperCRM li {
@@ -17,14 +23,21 @@
 }
 
 .SuperCRM li a {
-    padding: 4px;
-    display: block;
-    color: black;
-    text-decoration: none;
+  display: block;
+  color: black;
+  text-decoration: none;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
-.SuperCRM li:hover {
-  background-color: #6794AC;
+.SuperCRM li:hover a {
+  background-color:#333C4E;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  color:white;
 }
 
 .SuperCRM li span {
