--- a/Apps/Skyper/Client/css/skyper.css
+++ b/Apps/Skyper/Client/css/skyper.css
@@ -12,12 +12,6 @@
 	font-family : inherit; 		
 	font-size   : 100%;
 	font-weight:bold;
-
-    border-color:#73C5FF #3084BF #3084BF #73C5FF;
-    border-radius:2px;
-
-    background-color: #0094ff;
-    color:white;
 }
 
 .Skyper h1 {
@@ -25,11 +19,13 @@
 	flex: 0 1 auto;
 
     font-size: 150%;
+
     padding-left: 8px;
     margin: 0px;
-    border-bottom: 1px solid #73C5FF;
-}
 
+    color: #333C4E;
+    border-bottom: 1px solid #ddd;
+}
 
 .SkyperDashboard {
 	width: 100%;
@@ -49,6 +45,12 @@
 
 	padding: 4px;
 	margin:0px;
+
+    border-color:#73C5FF #3084BF #3084BF #73C5FF;
+    border-radius:2px;
+
+    background-color: #0094ff;
+    color:white;
 }
 
 .SkyperDashboard:hover {
@@ -71,7 +73,6 @@
 	flex: 0 1 auto;
 	-webkit-order: 0;
 	order: 0;
-
 	align-self: center;
 }
 
@@ -130,7 +131,18 @@
 	margin-top: 4px;
 }
 
+.Skyper skype-button {
+    margin:8px 8px 8px 8px !important;
+}
 
+.Skyper skype-button img {
+    vertical-align: middle !important;
+    margin:0px !important;
+}
+
+.Skyper skype-button p {
+    margin:0px !important;
+}
 
 
 
