Update dependencies (bower):
Juicy/juicy-tile-grid@2b3fd11630
Juicy/juicy-tile-list@b6e1b7812b
Juicy/juicy-tile-editor@3668b84d2b
PuppetJs/PuppetJs@0.1.11
Juicy/imported-template@2b30fc49c7
web-animations/web-animations-js@4bcf8f706b

--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -20,7 +20,7 @@ pj-dashboard {
     flex: 1 1 auto;
 }
 
-juicy-tile-list{
+juicy-tile-grid{
     flex: 1 1 auto;
     padding: 32px; /*this is the desired padding - labelled as WS on Jocke's screenshot. In future this margin will be created by the outermost gap*/
 }
