Added  disabled style to button
Added input styles for input style email,checkbox,password and number

--- a/Client/css/launcher-button.css
+++ b/Client/css/launcher-button.css
@@ -31,3 +31,8 @@
 .launcher-button:focus {
 	border:1px solid black;
 }
+
+.launcher-button:disabled {
+	background-color: #dddddd;
+	color: #777777;
+}
