--- a/Client/css/launcher-launchpad.css
+++ b/Client/css/launcher-launchpad.css
@@ -1,8 +1,8 @@
-.launchpad > h1{
-  margin: 32px 32px 0 32px;
+.launchpad{
+  padding: 32px;
 }
-.launchpad-grid{
-  display: block;
+.launchpad > h1{
+  margin: 0 0 0.8em 0;
 }
 launchpad-tile launchpad-icon{
   padding: 2px;
