--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -14,7 +14,7 @@
     flex: 1;
 }
 
-juicy-tile-grid{
+.workspace>juicy-tile-grid{
     /*flex: 1 1 auto;*/
     padding: 32px; /*this is the desired padding - labelled as WS on Jocke's screenshot. In future this margin will be created by the outermost gap*/
 }
