--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -44,6 +44,12 @@
     color: #8a98b0;
     /*background-color: #eee;*/
     box-shadow: 0px 0 10px black inset;
+    left:0px;
+    top:0px;
+    height:60px;
+    width:100%;
+    position:fixed;
+    z-index:10;
 }
 
 #filters {
