Juicy/juicy-tile-editor@0.0.1
Juicy/juicy-tile-editor@c6b1ab3ed1b65e9525028b5733fd1c8e9b486619

https://github.com/Juicy/juicy-tile-editor/issues/36

--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -123,6 +123,10 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
     text-decoration: none;
 }
 
+#settings {
+    z-index:11;
+}
+
 .launcher-dashboard-icon {
     height: 1.15em;
     width: 1.15em;
