--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -40,8 +40,8 @@
 
 #elementSettings {
     padding: 10px;
-    background-color: #333c4e;
-    color: #8a98b0;
+    background-color: #404040;
+    color:#F0F0F0;
     /*background-color: #eee;*/
     box-shadow: 0px 0 10px black inset;
     left:0px;
