--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -42,14 +42,13 @@
     padding: 10px;
     background-color: #404040;
     color:#F0F0F0;
-    /*background-color: #eee;*/
-    box-shadow: 0px 0 10px black inset;
     left:0px;
     top:0px;
     height:60px;
     width:100%;
     position:fixed;
     z-index:10;
+    border-bottom:1px solid #333333;
 }
 
 #filters {
