Color scheme of the editor
Juicy/juicy-tile-editor@fcce8045e70a92f55e0846d46f3956d85ac1362e
https://github.com/Juicy/juicy-tile-editor/issues/44

--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -40,8 +40,8 @@
 
 #elementSettings {
     padding: 10px;
-    background-color: #404040;
-    color:#F0F0F0;
+    background-color: #252526;
+    color:#FFF;
     left:0px;
     top:0px;
     height:60px;
