--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/css/jte-fontawesome-codes.css
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/css/jte-fontawesome-codes.css
@@ -16,3 +16,5 @@
 .jte-icon-th-large:before { content: '\e80e'; } /* '' */
 .jte-icon-eye:before { content: '\e80f'; } /* '' */
 .jte-icon-eye-off:before { content: '\e810'; } /* '' */
+.jte-icon-angle-up:before { content: '\e811'; } /* '' */
+.jte-icon-angle-left:before { content: '\e812'; } /* '' */
