--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/css/jte-fontawesome-codes.css
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/css/jte-fontawesome-codes.css
@@ -18,3 +18,4 @@
 .jte-icon-eye-off:before { content: '\e810'; } /* '' */
 .jte-icon-angle-up:before { content: '\e811'; } /* '' */
 .jte-icon-angle-left:before { content: '\e812'; } /* '' */
+.jte-icon-cancel:before { content: '\e813'; } /* '' */
