Juicy/juicy-tile-editor@6b7b379
Juicy/juicy-tile-editor@6b7b37986137cc83b3085ed6ec12af9d1784fb77
https://github.com/Polyjuice/Launcher/issues/133

--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -149,6 +149,13 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
     margin: 0;
 }
 
+.launcher-toolbar core-icon-button.modified,
+.launcher-toolbar core-icon-button.modified:hover,
+.launcher-toolbar core-icon-button.modified:hover /deep/ path {
+    color: red;
+    fill: red;
+}
+
 .launcher-toolbar core-icon-button.launcher-theme:hover {
     background-color: #6794AC;
 }
