--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/css/jte-fontawesome.css
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/css/jte-fontawesome.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'jte-fontawesome';
-  src: url('../font/jte-fontawesome.eot?90793785');
-  src: url('../font/jte-fontawesome.eot?90793785#iefix') format('embedded-opentype'),
-       url('../font/jte-fontawesome.woff?90793785') format('woff'),
-       url('../font/jte-fontawesome.ttf?90793785') format('truetype'),
-       url('../font/jte-fontawesome.svg?90793785#jte-fontawesome') format('svg');
+  src: url('../font/jte-fontawesome.eot?47926662');
+  src: url('../font/jte-fontawesome.eot?47926662#iefix') format('embedded-opentype'),
+       url('../font/jte-fontawesome.woff?47926662') format('woff'),
+       url('../font/jte-fontawesome.ttf?47926662') format('truetype'),
+       url('../font/jte-fontawesome.svg?47926662#jte-fontawesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'jte-fontawesome';
-    src: url('../font/jte-fontawesome.svg?90793785#jte-fontawesome') format('svg');
+    src: url('../font/jte-fontawesome.svg?47926662#jte-fontawesome') format('svg');
   }
 }
 */
@@ -74,3 +74,16 @@
 .jte-icon-angle-up:before { content: '\e811'; } /* '' */
 .jte-icon-angle-left:before { content: '\e812'; } /* '' */
 .jte-icon-cancel:before { content: '\e813'; } /* '' */
+.jte-icon-resize-vertical:before { content: '\e814'; } /* '' */
+.jte-icon-resize-horizontal:before { content: '\e815'; } /* '' */
+.jte-icon-level-up:before { content: '\e816'; } /* '' */
+.jte-icon-level-down:before { content: '\e817'; } /* '' */
+.jte-icon-exchange:before { content: '\e818'; } /* '' */
+.jte-icon-align-left:before { content: '\e819'; } /* '' */
+.jte-icon-align-center:before { content: '\e81a'; } /* '' */
+.jte-icon-align-right:before { content: '\e81b'; } /* '' */
+.jte-icon-align-justify:before { content: '\e81c'; } /* '' */
+.jte-icon-down:before { content: '\e81d'; } /* '' */
+.jte-icon-left:before { content: '\e81e'; } /* '' */
+.jte-icon-right:before { content: '\e81f'; } /* '' */
+.jte-icon-up:before { content: '\e820'; } /* '' */
