--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -162,7 +162,7 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
     box-sizing:border-box;
 }
 
-.launcher-toolbar polyjuice-include.preview {
+.launcher-toolbar starcounter-include.preview {
     width:360px;
 }
 
