--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -301,8 +301,20 @@ launchpad-tile h5 {
     font-size: 95%;
 }
 
+.css-grid-error-back {
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+
 @supports ((display: grid)) {
-    .css-grid-error {
+    .css-grid-error, 
+    .css-grid-error-back {
         display: none;
+        display: -moz-grid;
     }
 }
