Migrate launcher elements to Polymer 1.1

--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -212,6 +212,7 @@ core-field.launcher-theme /deep/ input {
     padding: 4px;
     border: 1px solid #3d4860;
     border-radius: 4px;
+    font-size: 14px;
 }
 
 /* Change plaveholder text color */
