--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -1,6 +1,6 @@
 ﻿html, body {
-    font-family: Calibri, Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-family: Lato, Helvetica, Arial, sans-serif;
+    font-size: 15px;
     padding: 0;
     margin: 0;
     height: 100%;
@@ -89,8 +89,12 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
     list-style-type: none; /* Remove bullets */
 }
 
+#launcher-menu ul li {
+    transition: all 0.5s ease;
+}
 #launcher-menu ul li:hover {
-    background-color: #6794AC;
+    
+    text-shadow: 1px 2px 3px rgba(0,0,0,.8);
     color: white;
 }
 
@@ -296,6 +300,20 @@ div.launcher-theme /deep/ input:-ms-input-placeholder { /* Internet Explorer 10+
 }
 
 launcher-search-input {
-    font-size: 10px;
+    font-size: 12px;
     vertical-align: middle;
 }
+
+launcher-search-input /deep/ input {
+    border:0;
+    height: 35px;
+    outline: none;
+    background: transparent;
+    outline: none;
+    color: #FFF;
+    font-weight: 200;
+    padding-left:10px;
+    font-size: 14px;
+}
+
+
