--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -77,6 +77,7 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
 #launcher-menu {
     background-color: #333c4e;
     color: #8a98b0;
+    line-height: normal;
 }
 
 #launcher-menu ul {
@@ -110,6 +111,20 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
 #launcher-menu a:active {
     color: inherit;
     text-decoration: none;
+}
+
+#launcher-menu a i { /*glyphicon, etc*/
+    width: 16px;
+    text-align: center;
+}
+
+#launcher-menu a img,
+#launcher-menu a svg {
+    width: 16px;
+    height: 16px;
+    vertical-align: text-bottom;
+    margin-bottom: 1px;
+    margin-top: 1px;
 }
 
 .launcher-dashboard-icon {
