--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -6,11 +6,6 @@
     height: 100%;
 }
 
-#launcher-menu {
-    flex: 0 1 auto;
-    color: #8a98b0;
-}
-
 #launcher-content {
     flex: 1;
 }
@@ -23,10 +18,10 @@
 #homeIcon {
     width: 19px;
     height: 19px;
-    margin: 0px 8px 2px 8px;
     color:white;
     display:inline-block;
     font-size:18px;
+    margin-left: 4px;
 }
 
 #launcher-main {
@@ -78,6 +73,7 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
     background-color: #333c4e;
     color: #8a98b0;
     line-height: normal;
+    flex: 0 1 auto;
 }
 
 #launcher-menu ul {
@@ -140,7 +136,9 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
     background-color: #333c4e;
     color: #8a98b0;
     font-size: 28px;
-    padding: 2px 10px;
+    line-height: normal; /*reset bootstrap line-height*/
+    padding: 0 10px;
+    height: 50px;
     display: -webkit-box !important;
     display: -ms-flexbox !important;
     display: -moz-flex !important;
@@ -158,11 +156,11 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
 .launcher-toolbar .glyphicon {
     color:white;
     font-size:18px;
-    margin:0px 11px;
 }
 
-.launcher-toolbar a.icon {
-    height: 18px;
+.launcher-toolbar > * ,
+.launcher-toolbar #launcher-search-icon {
+    margin-right: 11px;
 }
 
 .launcher-toolbar div.preview {
@@ -185,10 +183,21 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
     width:360px;
 }
 
-.launcher-toolbar paper-icon-button {
-    color: white;
-    padding: 8px;
-    margin: 0;
+.launcher-toolbar img {
+    vertical-align: baseline; /*reset bootstrap*/
+}
+
+.launcher-toolbar #launcher-settings-icon {
+    width: 22px;
+    height: 22px;
+}
+
+.launcher-toolbar paper-icon-button,
+.launcher-toolbar so-signin {
+    padding: 0;
+    font-size: 0; /*otherwise plays bad with flexbox*/
+    width: 24px;
+    height: 24px;
 }
 
 .launcher-toolbar paper-icon-button.modified,
