Can't see why this is here. Should we override it in seperate css instead?

--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -140,7 +140,7 @@ paper-toggle-button.launcher-theme::shadow #toggleBar[checked] {
 }
 
 
-#launcher-menu a span {
+#launcher-menu-old a span {
     display: none;
 }
 #launcher-menu a i.glyphicon {
