fix client side switching of workspaces to not remove inactive workspace (https://github.com/StarcounterPrefabs/Launcher/issues/214)

--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -15,6 +15,14 @@
     padding: 32px; /*this is the desired padding - labelled as WS on Jocke's screenshot. In future this margin will be created by the outermost gap*/
 }
 
+starcounter-include.workspace {
+    display: none;
+}
+
+starcounter-include.workspace[visible] {
+    display: block;
+}
+
 #homeIcon {
     width: 19px;
     height: 19px;
