Add cookie usage warning
https://github.com/StarcounterPrefabs/Launcher/issues/217

--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -285,3 +285,8 @@ launcher-search-input {
     font-size: 10px;
     vertical-align: middle;
 }
+
+.launcher-accept-cookie-button {
+    min-width: 55px;
+    margin-left: 10px;
+}
