--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -7,6 +7,65 @@
     color: #000000;
 }
 
+/* LOADING SPLASH PAGE */
+body > *
+{
+    _transition: opacity 0.5s ease;
+    opacity: 1;
+}
+body.loading > *
+{
+    opacity: 0;
+}
+body.loading .splash
+{
+    font-family: 'Lato',Helvetica,Arial,sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    display: block;
+    opacity: 1;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position:absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+}
+
+@-webkit-keyframes spin {
+    from {-webkit-transform: rotateZ(0deg);}
+    to {-webkit-transform: rotateZ(360deg);}
+}
+
+@keyframes spin {
+    from {transform: rotateZ(0deg);}
+    to {transform: rotateZ(360deg);}
+}
+
+body.loading .splash #splash-spinner {        
+    display: inline-block;
+    -webkit-animation: spin 1s linear infinite;
+    -moz-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+}
+
+body.loading .splash #splash-text {        
+    display: inline-block;
+    padding-left: 10px;
+}
+
+body .splash
+{
+    display: none;
+}
+
+
+
 body /deep/ juicy-tile-table,  body /deep/ .juicy-tile-table
 {
     min-width: 100px !important;
